examples/testdata/path_matcher/envoy_config.json
{
  "admin": {},
  "node": {
    "cluster": "ESPv2_cluster",
    "id": "ESPv2"
  },
  "staticResources": {
    "clusters": [
      {
        "connectTimeout": "20s",
        "loadAssignment": {
          "clusterName": "127.0.0.1",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "127.0.0.1",
                        "portValue": 8082
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "examples-path-matcher.endpoints.cloudesf-testing.cloud.goog_local",
        "type": "LOGICAL_DNS"
      },
      {
        "connectTimeout": "20s",
        "loadAssignment": {
          "clusterName": "169.254.169.254",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "169.254.169.254",
                        "portValue": 80
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "metadata-cluster",
        "type": "STRICT_DNS"
      },
      {
        "connectTimeout": "5s",
        "dnsLookupFamily": "V4_ONLY",
        "loadAssignment": {
          "clusterName": "servicecontrol.googleapis.com",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "servicecontrol.googleapis.com",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "service-control-cluster",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "servicecontrol.googleapis.com"
          }
        },
        "type": "LOGICAL_DNS"
      },
      {
        "connectTimeout": "20s",
        "loadAssignment": {
          "clusterName": "http-bookstore-edf123456-uc.a.run.app",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "http-bookstore-edf123456-uc.a.run.app",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "http-bookstore-edf123456-uc.a.run.app:443",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "http-bookstore-edf123456-uc.a.run.app"
          }
        },
        "type": "LOGICAL_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socketAddress": {
            "address": "0.0.0.0",
            "portValue": 8080
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "commonHttpProtocolOptions": {
                    "headersWithUnderscoresAction": "REJECT_REQUEST"
                  },
                  "httpFilters": [
                    {
                      "name": "com.google.espv2.filters.http.path_matcher",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v8.http.path_matcher.FilterConfig",
                        "rules": [
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.ESPv2_Autogenerated_CORS_**",
                            "pattern": {
                              "httpMethod": "OPTIONS",
                              "uriTemplate": "/**"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.ESPv2_Autogenerated_CORS_libraries_library_id_shelves_shelf_id",
                            "pathParameterExtraction": {},
                            "pattern": {
                              "httpMethod": "OPTIONS",
                              "uriTemplate": "/libraries/{library_id}/shelves/{shelf_id}"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.GetShelf",
                            "pathParameterExtraction": {
                              "snakeToJsonSegments": {
                                "shelf_id": "shelfId"
                              }
                            },
                            "pattern": {
                              "httpMethod": "GET",
                              "uriTemplate": "/libraries/{library_id}/shelves/{shelf_id}"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.Google_Autogenerated_Unrecognized_Delete_Method_Call",
                            "pattern": {
                              "httpMethod": "DELETE",
                              "uriTemplate": "/**"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.Google_Autogenerated_Unrecognized_Get_Method_Call",
                            "pattern": {
                              "httpMethod": "GET",
                              "uriTemplate": "/**"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.Google_Autogenerated_Unrecognized_Patch_Method_Call",
                            "pattern": {
                              "httpMethod": "PATCH",
                              "uriTemplate": "/**"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.Google_Autogenerated_Unrecognized_Post_Method_Call",
                            "pattern": {
                              "httpMethod": "POST",
                              "uriTemplate": "/**"
                            }
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.Google_Autogenerated_Unrecognized_Put_Method_Call",
                            "pattern": {
                              "httpMethod": "PUT",
                              "uriTemplate": "/**"
                            }
                          }
                        ]
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.backend_auth",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v8.http.backend_auth.FilterConfig",
                        "imdsToken": {
                          "cluster": "metadata-cluster",
                          "timeout": "30s",
                          "uri": "http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/identity"
                        },
                        "rules": [
                          {
                            "jwtAudience": "https://http-bookstore-edf123456-uc.a.run.app/shelves",
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.ESPv2_Autogenerated_CORS_libraries_library_id_shelves_shelf_id"
                          },
                          {
                            "jwtAudience": "https://http-bookstore-edf123456-uc.a.run.app/shelves",
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.GetShelf"
                          }
                        ]
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.backend_routing",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v8.http.backend_routing.FilterConfig",
                        "rules": [
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.ESPv2_Autogenerated_CORS_libraries_library_id_shelves_shelf_id",
                            "pathPrefix": "/shelves",
                            "pathTranslation": "CONSTANT_ADDRESS"
                          },
                          {
                            "operation": "1.examples_path_matcher_endpoints_cloudesf_testing_cloud_goog.GetShelf",
                            "pathPrefix": "/shelves",
                            "pathTranslation": "CONSTANT_ADDRESS"
                          }
                        ]
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "suppressEnvoyHeaders": true
                      }
                    }
                  ],
                  "localReplyConfig": {
                    "bodyFormat": {
                      "jsonFormat": {
                        "code": "%RESPONSE_CODE%",
                        "message": "%LOCAL_REPLY_BODY%"
                      }
                    }
                  },
                  "routeConfig": {
                    "name": "local_route",
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "backend",
                        "routes": [
                          {
                            "match": {
                              "headers": [
                                {
                                  "exactMatch": "OPTIONS",
                                  "name": ":method"
                                }
                              ],
                              "safeRegex": {
                                "googleRe2": {},
                                "regex": "^/libraries/[^\\/]+/shelves/[^\\/]+$"
                              }
                            },
                            "route": {
                              "cluster": "http-bookstore-edf123456-uc.a.run.app:443",
                              "hostRewriteLiteral": "http-bookstore-edf123456-uc.a.run.app",
                              "timeout": "15s"
                            }
                          },
                          {
                            "match": {
                              "headers": [
                                {
                                  "exactMatch": "GET",
                                  "name": ":method"
                                }
                              ],
                              "safeRegex": {
                                "googleRe2": {},
                                "regex": "^/libraries/[^\\/]+/shelves/[^\\/]+$"
                              }
                            },
                            "route": {
                              "cluster": "http-bookstore-edf123456-uc.a.run.app:443",
                              "hostRewriteLiteral": "http-bookstore-edf123456-uc.a.run.app",
                              "timeout": "15s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "ingress_http",
                  "upgradeConfigs": [
                    {
                      "upgradeType": "websocket"
                    }
                  ],
                  "useRemoteAddress": false,
                  "xffNumTrustedHops": 2
                }
              }
            ]
          }
        ],
        "name": "ingress_listener"
      }
    ]
  }
}
